--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -532,16 +532,19 @@ ggplot(item_effects_not_spread, aes(x=as.numeric(age_numeric), y=mean, color=sit
 ```
 
 # Discussion
-Here, we examined the consistency and variability in the developmental trajectory of children's drawings across two different drawing tasks and geographical locations. First, we found that asking children to draw from memory ("Can you draw a [cat]?") vs. from perception ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Overall, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
+Here, we examined the consistency and variability in the developmental trajectory of children's drawings across two different drawing tasks and geographical locations. First, we found that asking children to draw from memory ("Can you draw a [cat]?") vs. from perception ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
 
-Instead, we found that the recogniability of children's drawings differed considerably across  between geographical locations.  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would show perhaps exhibit greater dexterity in our tracing assessment task.  However, children across the two sites showed equivalent tracing abilites -- despite the fact that children's individual tracing abilities were strong predictors of the recognizability of the drawings that they produced.  A second possibility is that children recruited at preschools near Beijing were more engaged with the task than children recruited at museums near San Jose, USA: this more academic context could have created conditions in which children were incentivized to spend more effort on their drawings. However, our measures of children's effort (e.g., amount of time spent drawing) did not account for differences in recognizability across sites, providing evidence against this account. A final possibility is that children across these two sites may differ in the amount of practice they have drawing common object categories. If so, then children who spend more time drawing may simply have more practice communicating about the diagnostic features of different object categories. In future work, surveys that assesses the amount of time that children spend drawing outside of these experimental contexts could address this hypothesis.
+Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recogizable their drawings were.  However, children across the two sites showed equivalent tracing abilities -- despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence the drawings they produce yet further suggests that it is far from the only factor that does so.
 
-A natural question for future concerns the relationship between the degree to which children across these different geographical sites show differences in their ability to recognize drawings of object categories. In a U.S. based population, prior work has found that older children not only produce more recognizable drawings of object categories but tend to be better skilled at recognizing other children's drawings. Thus, if children in different contexts tend to spend more time practicing drawing, these children may also be more skilled at recognizing drawings of object categories and explicitely identifying the distinctive visual features of these categories.
+A second possibility that recognizability may have differed across sites is that children recruited at preschools near Beijing were simply more engaged with the task than children recruited at museums near San Jose, USA. A more academic context could have created an environment in which children felt incentivized to spend more effort on their drawings. However, our measures of children's effort (e.g., amount of time spent drawing) did not account for differences in recognizability across sites.  Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account.  A final possibility is that children across these two sites could differ in the amount of practice they have drawing common object categories. If so, then children who spend more time drawing may simply have more practice communicating about the diagnostic features of different object categories. In future work, surveys that assesses the amount of time that children at these two sites -- as well as many others -- spend drawing outside of these experimental contexts could address this hypothesis.
 
-Furthermore, these results of course do not preclude the possibility that children's drawings differed across these two conditions or geographical sites in other interesting ways beyond their recognizability. Finer-grained measurements of these drawings could reveal interesting differences with respect to the exact visual features that children chose to include, the strategies they employed while drawing, or the order in which they chose to draw certain elements of these categories. 
-Furthermore, while this work moves beyond investigating the drawings of children at a single geographical location, these children are still in many ways non-representative of the genera population. These developmental trajectories may thus vary in many ways that are not captured by the slice of experience captured by the present dataset.
+A natural question for future work concerns the relationship between the degree to which children across different geographical sites might also show differences in their ability to recognize drawings of object categories. In a U.S. based population, prior work found that older children not only produce more recognizable drawings of object categories but tend to be better skilled at recognizing other children's drawings [@long2021parallel]. Thus, if children in different environmentsand contexts tend to spend more time practicing drawing, these children may also be more skilled at recognizing drawings of object categories and perhaps explicitly identifying the distinctive visual features of these categories.
 
-Overall, these results take a first step towards characterizing the consistency and variability in the developmental trajectory of children's drawings across development across two different tasks and geographical locations. [more here].
+However, these results of course do not preclude the possibility that children's drawings differed across these two conditions or geographical sites in other interesting ways beyond their recognizability. Finer-grained measurements of these drawings could reveal differences with respect to the exact visual features that children chose to include, the strategies they employed while drawing, or the order in which they chose to draw certain elements of these categories.  We have thus made this dataset and the resulting code publicly available for these exploratory analyses. 
+
+More broadly, however, while this work moves beyond investigating the drawings of children at a single geographical location, these children are still in many ways non-representative of the genera population. Many children within the same country or area code may differ in the very same ways children's drawings differ in this dataset. At the same time, children in more rural populations may spend considerably less time both consuming and producing drawings of object categories. Thus, these developmental trajectories could thus vary in several ways that are not captured by the slice of experience represented in the the present dataset.
+
+Nonetheless, these results take a first step towards characterizing the consistency and variability in the developmental trajectory of children's drawings across development  two different tasks and geographical locations.  We propose that the systematic collection of digital drawings across many different populations, ages, and tasks has potential to shed light on the processes that result in the development of children's drawing abilities.  
 
 # Acknowledgements  
 We thank Yi Feng and Megan Merrick for assistance with data collection, with whom this project would have not been possible. We also gratefully acknowledge the San Jose Children's Discovery Museum for their collaboration. We are also thankful to all of the parents at XX and XX preschool whose children participated. We also thank the members of the Stanford Language and Cognition lab for their feedback. This work was funded by an NSF SPRF-FR Grant \#1714726 to BLL and a Jacobs Foundation Fellowship to MCF. 
